--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,28 @@
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
+# Compiled Object files
+*.slo
 *.lo
+*.o
 
-# Shared objects (inc. Windows DLLs)
-*.dll
+# Compiled Dynamic libraries
 *.so
-*.so.*
-*.dylib
 
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+# Compiled Static libraries
+*.lai
+*.la
+*.a
 
-# Debug files
-*.dSYM/
+# Ignore these files
+*~
+*.swp
+
+# ignore compilation results
+
+build/*
+src/config.h
+
+
+
+
+
+
+
