--- a/config.h.in
+++ b/config.h.in
@@ -1,7 +1,7 @@
 #ifndef MEMOIRE_CONFIG_H
 #define MEMOIRE_CONFIG_H
 
-#define VERSION_MAJOR @hyg_usb_VERSION_MAJOR@
-#define VERSION_MINOR @hyg_usb_VERSION_MINOR@
+#define VERSION_MAJOR @hyg-usb_VERSION_MAJOR@
+#define VERSION_MINOR @hyg-usb_VERSION_MINOR@
 
 #endif
