fixed typo in cmakefile

--- a/man/CMakeLists.txt
+++ b/man/CMakeLists.txt
@@ -15,6 +15,7 @@ endif(NOT NIX_BZIP2_PATH)
 
 
 ### Default manpage 
+######
 
 if(NIX_BZIP2_PATH)
 
@@ -33,22 +34,30 @@ else(NIX_BZIP2_PATH)
 endif(NIX_BZIP2_PATH)
 
 
-### fr manpage
+### fr et fr.UTF-8 manpages
+######
 
 
 if(NIX_BZIP2_PATH)
 
 	add_custom_target( "man_fr.gz" ALL cp -r "${PROJECT_SOURCE_DIR}/man/fr" .
 		COMMAND ${NIX_BZIP2_PATH} -k -f "fr/man1/hyg-usb.1" 
-		COMMENT "Compressing fr manpage" )
+		COMMENT "Compressing fr(UTF-8) manpage" )
 
 	install(FILES "${CMAKE_CURRENT_BINARY_DIR}/fr/man1/hyg-usb.1.bz2"
 		DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/man/fr/man1" COMPONENT doc )
+
+	install(FILES "${CMAKE_CURRENT_BINARY_DIR}/fr/man1/hyg-usb.1.bz2"
+		DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/man/fr.UTF-8/man1" COMPONENT doc )
 
 else(NIX_BZIP2_PATH)
 
 	install(FILES "fr/man1/hyg-usb.1"
        		DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/man/fr/man1" COMPONENT doc )
+	
+	install(FILES "fr/man1/hyg-usb.1"
+		DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/man/fr.UTF-8/man1" COMPONENT doc )
+
 
 endif(NIX_BZIP2_PATH)
 
