Static linking is now supported by cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,25 +38,35 @@ option ( HYG_INSTALL_MAN "Generate and install manpages ?" ON )
 option ( HYG_STATIC_LINK "Generate statically linked exec ?" OFF )
 
 
-
 ### Search for Lib/Headers
 
 include( GNUInstallDirs )
+
+if ( HYG_STATIC_LINK )
+
+	set(CMAKE_EXE_LINKER_FLAGS -static)
+	set(CMAKE_FIND_LIBRARY_SUFFIXES .a)
+
+	find_package( libpthread-static REQUIRED )
+	find_package( librt-static REQUIRED )
+
+endif (HYG_STATIC_LINK )
 
 find_package( libusb-1.0 REQUIRED)
 
 ### Config File
 
-
 configure_file ( "${PROJECT_SOURCE_DIR}/config.h.in"
 		 "${PROJECT_SOURCE_DIR}/src/config.h" )
-
 
 ### Set include directories 
         
 include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/lib/include"
 	             "${CMAKE_CURRENT_BINARY_DIR}"
-		     ${LIBUSB_1_INCLUDE_DIRS} )
+		      ${LIBUSB_1_INCLUDE_DIRS} 
+)
+
+### Set link directories
 
 # link_directories( "${VISION_LIBRARY_DIR}" )
 
@@ -71,13 +81,26 @@ file( GLOB hdr "src/*.h"  "include/*.h" )
 
 add_executable( "hyg-usb" ${src} ${hdr} ) 
 
-
 ### Linking
 
-target_link_libraries( "hyg-usb" ${LIBUSB_1_LIBRARIES} )
+if (HYG_STATIC_LINK )
+
+	set_target_properties(hyg-usb PROPERTIES LINK_SEARCH_START_STATIC 1)
+	set_target_properties(hyg-usb PROPERTIES LINK_SEARCH_END_STATIC 1)
+	
+	target_link_libraries( "hyg-usb" 
+				${LIBUSB_1_LIBRARIES}
+				${LIBPTHREAD_LIBRARIES}
+				${LIBRT_LIBRARIES}
+	)
+
+else (HYG_STATIC_LINK )
+
+	target_link_libraries( "hyg-usb" ${LIBUSB_1_LIBRARIES} )
+
+endif (HYG_STATIC_LINK )
 
 ### Install 
-
 
 install( TARGETS "hyg-usb"
 	    RUNTIME DESTINATION ${INSTALL_BIN_PATH}  COMPONENT main
